# geglu-vs-relu-mnist

./: README.md  project.py  pyproject.toml
