[project]
name = "mnist-ffn-comparison"
version = "0.1.0"
description = "Compare FFN_ReLU and FFN_GeGLU on MNIST using PyTorch Lightning"
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "pytorch-lightning>=2.0.0",
    "torchmetrics",
    "matplotlib",
    "numpy"
]
requires-python = ">=3.8"
